@@ -175,7 +175,7 @@
 	  panels up, the second one all panels down and the TaskBar hidden.
 	  Panels are quite useful on such a screen.
 	  The "Window Maker FvwmButtons" has four panels that
-	  run only if I use it: this save my battery.
+	  run only if I use it: this saves my battery.
 	</td></tr>
 
       <tr valign="top"><td>
@@ -221,6 +221,18 @@
 	  found onto Licq and xmms.  I also customized the title bars a bit with a
 	  textured background that fits in with the overall blueness of the Miyu
 	  stuff. 
+	</td></tr>
+
+      <tr valign="top"><td>
+	  <a href="MURAKAMI_Tomokazu-desk-1280x1024.gif">
+	    <img src="MURAKAMI_Tomokazu-desk-thumbnail.gif"
+	      alt="Kanji Enabled"
+	      width=160 height=120 align=left></a></td>
+	<td>
+	  Submitted by MURAKAMI Tomokazu.
+	  This is FVWM version 2.3.22. It's compiled with the --enable-kanji
+	  option.  With this, I can use Nipponese satisfactorily.  Furthermore, I set
+	  up Emacs to be able to use JIS X 0213."
 	</td></tr>
 
     </table>
