@@ -1,6 +1,7 @@
 2000-10-27  Dan Espen  <dane@mk.telcordia.com>
 
 	* screenshots/index.html: Add borders, vertically align to the top.
+	Another screenshot, this one from MURAKAMI Tomokazu.
 
 2000-10-26  Dan Espen  <dane@mk.telcordia.com>
 
